[project]
name = "sea-level-reconstruction"
version = "0.1.0"
description = ""
authors = [
    {name = "johanna",email = "johanna.hillebrand@hhu.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "xarray (>=2025.7.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
