[tool.poetry]
name = "sea-level-reconstruction"
version = "0.1.0"
description = ""
authors = ["Johanna Hillebrand <johanna.hillebrand@hhu.de>"
]

packages = [
    { include = "src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
xarray = ">=2025.7.0,<2026.0.0"
loguru = ">=0.7.3,<0.8.0"
netcdf4 = ">=1.7.2,<2.0.0"
scipy = ">=1.16.0,<2.0.0"
cartopy = ">=0.24.1,<0.25.0"
matplotlib = ">=3.10.3,<4.0.0"
haversine = ">=2.9.0,<3.0.0"
geopandas = ">=1.1.1,<2.0.0"
joblib = ">=1.5.1,<2.0.0"
scikit-learn = ">=1.7.0,<2.0.0"
tqdm = "^4.67.1"
loky = "^3.5.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.poetry.scripts]
sea_level_reconstruction = "main:main"
